objects/Shipping_Update__x.object
<CustomObject>
    <externalDataSource>Online_Orders</externalDataSource>
    <externalName>shipping_updates</externalName>
    <externalRepository>Map_Link</externalRepository>
    <fields>
        <fullName>City__c</fullName>
        <externalDeveloperName>city</externalDeveloperName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <externalDeveloperName>comment</externalDeveloperName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <externalDeveloperName>exception</externalDeveloperName>
        <label>Exception</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <externalDeveloperName>location</externalDeveloperName>
        <label>Location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Map_Link__c</fullName>
        <externalDeveloperName>map_link</externalDeveloperName>
        <label>Map Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <externalDeveloperName>state</externalDeveloperName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <externalDeveloperName>status</externalDeveloperName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arrived At Facility</fullName>
                </value>
                <value>
                    <fullName>Delayed</fullName>
                </value>
                <value>
                    <fullName>In Transit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updated_On__c</fullName>
        <externalDeveloperName>updated_on</externalDeveloperName>
        <label>Updated On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <externalDeveloperName>vin</externalDeveloperName>
        <label>Vehicle</label>
        <length>80</length>
        <referenceTargetField>Vehicle__c.VIN__c</referenceTargetField>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Shipping Updates</relationshipLabel>
        <relationshipName>Shipping_Updates</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <label>Shipping Update</label>
    <pluralLabel>Shipping Updates</pluralLabel>
</CustomObject>